--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <img src="photos/jhenny.jpg" class="d-block w-100 size" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="photos/tucci.png" class="d-block w-100 size" alt="...">
+        <img src="photos/tucci.jpg" class="d-block w-100 size" alt="...">
       </div>
       <div class="carousel-item">
         <img src="photos/foto-190.jpg" class="d-block w-100 size" alt="...">
