--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div >
     <h1 id="fonth1">Jhenny & Sérgio</h1>
   </div>
-  <div><video controls src="https://youtu.be/T0U5nva-SgA"></video></div>
+  <div><video controls src="https://www.youtube.com/watch?v=T0U5nva-SgA"></video></div>
   <div id="carouselExampleSlidesOnly" class="carousel slide size" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
